<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeBackground"
    android:id="@+id/layout2"
    >

    <Button
        android:id="@+id/BackMainActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:onClick="launchBackFirstActivity"
        android:text="@string/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ChangeBackgroundTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/background_change"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Color1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:backgroundTint="#FFA500"
        android:onClick="ChangeBackgroundOrange"
        android:text="@string/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Color2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF0000"
        android:onClick="ChangeBackgroundRed"
        android:text="@string/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Color1" />

    <Button
        android:id="@+id/Color3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:backgroundTint="#87ceeb"
        android:onClick="ChangeBackgroundSkyBlue"
        android:text="@string/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toEndOf="@+id/Color1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Color4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#c31cd9"
        android:onClick="ChangeBackgroundPurple"
        android:text="@string/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Color3" />

    <Button
        android:id="@+id/Color5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="#ff00dd"
        android:onClick="ChangeBackgroundPink"
        android:text="@string/pink"
        app:layout_constraintEnd_toStartOf="@+id/Color3"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toEndOf="@+id/Color1"
        app:layout_constraintTop_toBottomOf="@+id/ChangeBackgroundTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>